--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,10 @@
-body {
+html {
   background-image: url("../images/background.jpg");
+  background-position: center;
   background-repeat: no-repeat;
-  background-size:cover;
+  background-size: cover;
+  height:100%
 }
 
 .startButton{
-  width:50%;
-  font-size: 36px;
-  display:block;
 }
