--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,40 @@
-html{
+body{
+  margin:0;
   background-image: url("../images/background.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
+
   background-size: cover;
-  height:100%
+  height:100%;
+  background-repeat:no-repeat;
+  display: compact;
 }
 
 
 
 #startScreen{
-  margin: 200px;
+  margin:300px, auto, auto, auto;
+  padding:25px;
+  background-color:rgba(225, 230, 225, .8);
+  /* padding:300px; */
+  text-align: center;
+}
+
+#gameScreen{
+  display:hidden;
   text-align: center;
   
+}
+
+#gameText{
+  background-color:rgba(225, 230, 225, .8);
+}
+
+
+.block {
+
+}
+
+
+.footer{
+  padding-bottom:5px;
+  color:rgba(225, 230, 225, .8);
 }
