--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
 
 
 
-#gameContent{
+#gameBanner{
   margin:300px, auto, auto, auto;
   padding:20px;
   background-color:rgba(225, 230, 225, .8);
