--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,6 @@ body {
   background-attachment: fixed;
 }
 
-
-
 #gameBanner{
   margin:300px, auto, auto, auto;
   padding:20px;
@@ -20,6 +18,7 @@ body {
 
 #gameScreen{
   padding-top: 25px;
+  padding-bottom: 25px;
   text-align: center;
 }
 
@@ -27,18 +26,24 @@ body {
   background-color:rgba(225, 230, 225, .8);
   display:none;
   padding:20px, auto, 20px, auto;
-  clear:both;
 }
 
 
 .choices {
-
 }
 
+#resultsContent{
+  background-color:rgba(225, 230, 225, .8);
+  display:none;
+  padding:20px, auto, 20px, auto;
+}
 
 .footer{
-  position:fixed;
+  position:absolute;
   bottom:0;
+  width:300px;
+  /* left:50%;
+  right:50%; */
   text-align:center;
   padding-bottom:20px;
   padding-top: 50px;
