changed from columns to centered divs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,20 +11,22 @@ body {
 
 #gameBanner{
   padding:20px;
-  margin-top:20px;
+  width:500px;
+  margin: 20px auto;
   background-color:rgba(225, 230, 225, .8);
   text-align: center;
 }
 
 #gameScreen{
-  margin-top:25px;
-  padding-top: 25px;
+  margin: 20px auto;
   padding-bottom: 25px;
   text-align: center;
+  display:inline-block;
 }
 
 #quizContent{
   background-color:rgba(225, 230, 225, .8);
+  margin: 20px auto;
   display:none;
   padding:20px, auto, 20px, auto;
 }
@@ -34,8 +36,9 @@ body {
 }
 
 #resultsContent{
+  margin: 20px auto;
   background-color:rgba(225, 230, 225, .8);
-  display:none;
+  /* display:none; */
   padding:20px, auto, 20px, auto;
 }
 
@@ -47,4 +50,5 @@ body {
   padding-bottom:20px;
   padding-top: 50px;
   color:rgba(225, 230, 225, .8);
+  background-color:
 }
