fixed typo in css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,5 +60,5 @@ input[type="radio"]{
   padding-bottom:20px;
   padding-top: 50px;
   color:rgba(225, 230, 225, .8);
-  background-color:
+  /* background-color: */
 }
